@@ -1,0 +1,37 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    body {
+      height: 2000px;
+      margin: 0px;
+      padding: 0px;
+    }
+    .main {
+      position: fixed;
+    }
+    .fixed {
+      position: fixed;
+      width: 100%;
+      height: 100px;
+      left: 0px;
+      bottom: -100px;
+      background-color: red;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="main">
+    This test is applicable on platforms that do accelerated compositing, can prepaint out-of-view contents and can scroll the contents into the viewport without repainting them.<p>
+    The following settings need to be enabled:<p>
+    - acceleratedCompositingForFixedPositionEnabled<br>
+    - fixedPositionCreatesStackingContext<p>
+    To test, scroll the page up and down. The test passes if there is no temporary or permanent red in the page.
+  </div>
+
+  <!-- An out-of-view fixed element that should be never visible -->
+  <div class="fixed"></div>
+</body>
+</html>
+
