@@ -1,3 +1,15 @@
+2012-12-12  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        Pre-painting should not paint out-of-view fixed position elements
+        https://bugs.webkit.org/show_bug.cgi?id=104724
+
+        Reviewed by James Robinson.
+
+        Test: ManualTests/compositing/fixed-position-out-of-view-scroll-prepaint.html
+
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::paintLayer): Don't paint out-of-view fixed position elements.
+
 2012-12-11  Roger Fong  <roger_fong@apple.com>
 
         Enable VIDEO_TRACK on Windows.
