@@ -1,3 +1,14 @@
+2012-12-12  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        Pre-painting should not paint out-of-view fixed position elements
+        https://bugs.webkit.org/show_bug.cgi?id=104724
+
+        Reviewed by James Robinson.
+
+        New manual test.
+
+        * ManualTests/compositing/fixed-position-out-of-view-scroll-prepaint.html: Added.
+
 2012-12-12  Krzysztof Czech  <k.czech@samsung.com>
 
         [EFL] Possibility to turn off accessibility feature for WebKit-EFL.
